classDiagram
direction LR

%% ==================== FRONTEND ====================

class FrontendController["NotificationController"] {
    <<frontend controller>>
    + Admin() IActionResult
    + GetAllAdmin() Task~IActionResult~
}

class NotificationViewModel {
    <<view model>>
    + NotificationId : int
    + ReceiverId : int
    + ReceiverFullName : string?
    + ReceiverEmail : string?
    + Title : string
    + Content : string
    + LinkAction : string?
    + IsRead : bool
    + CreatedAt : DateTime?
    + ReceiverRole : string?
    + SenderId : int?
    + SenderRole : string?
}

%% ==================== BACKEND - CONTROLLER ====================

class BackendController["NotificationController"] {
    <<backend controller>>
    - _notiService : INotificationService
    + GetAllNotifications(page: int, pageSize: int) Task~IActionResult~
}

%% ==================== BACKEND - DTOs ====================

class NotificationAdminResponseDto {
    <<dto>>
    + NotificationId : int
    + Title : string?
    + Content : string?
    + IsRead : bool?
    + CreatedAt : DateTime?
    + ReceiverEmail : string?
    + ReceiverFullName : string?
    + ReceiverRole : string?
    + ReceiverId : int?
    + SenderId : int?
    + SenderRole : string?
    + LinkAction : string?
}

%% ==================== BACKEND - DOMAIN ENTITIES ====================

class Notification {
    <<entity>>
    + NotificationId : int
    + SenderId : int?
    + ReceiverId : int?
    + Title : string?
    + Content : string?
    + LinkAction : string?
    + IsRead : bool?
    + IsRemoved : bool?
    + CreatedAt : DateTime?
    + Receiver : Account?
    + Sender : Account?
}

class Account {
    <<entity>>
    + AccountId : int
    + Email : string
    + Username : string?
    + PasswordHash : string?
    + PhoneNumber : string?
    + AccountStatus : string?
    + AccountFlagCount : int?
    + AccountLastLoginAt : DateTime?
    + AuthProvider : string?
    + AvatarUrl : string?
    + RefreshToken : string?
    + RefreshTokenExpiryTime : DateTime?
    + IsVerified : bool
    + AccountCreatedAt : DateTime?
    + AccountUpdatedAt : DateTime?
    + User : User?
    + Manager : Manager?
    + NotificationReceivers : ICollection~Notification~
    + NotificationSenders : ICollection~Notification~
}

class User {
    <<entity>>
    + UserId : int
    + FullName : string
    + Bio : string?
    + DateOfBirth : DateOnly?
}

class Manager {
    <<entity>>
    + ManagerId : int
    + Role : string?
    + DisplayName : string
    + FullName : string?
    + PhoneNumber : string?
    + AvatarUrl : string?
    + Bio : string?
}

%% ==================== BACKEND - SERVICE INTERFACES ====================

class INotificationService {
    <<service interface>>
    + GetAllNotificationsForAdminAsync(page: int, pageSize: int) Task~PagedResult~NotificationAdminResponseDto~~ *
}

%% ==================== BACKEND - REPOSITORY INTERFACES ====================

class INotificationRepository {
    <<repository interface>>
    + GetAllAsync(page: int, pageSize: int) Task~(List~Notification~ Items, int TotalCount)~ *
    + AutoCleanupAdminNotificationsAsync() Task~int~ *
}

%% ==================== BACKEND - SERVICE IMPLEMENTATION ====================

class NotificationService {
    <<service>>
    - _repo : INotificationRepository
    + GetAllNotificationsForAdminAsync(page: int, pageSize: int) Task~PagedResult~NotificationAdminResponseDto~~
}

%% ==================== BACKEND - REPOSITORY IMPLEMENTATION ====================

class NotificationRepository {
    <<repository>>
    - _context : AppDbContext
    + GetAllAsync(page: int, pageSize: int) Task~(List~Notification~ Items, int TotalCount)~
    + AutoCleanupAdminNotificationsAsync() Task~int~
}

%% ==================== BACKEND - DbContext ====================

class AppDbContext {
    <<dbcontext>>
    + Accounts : DbSet~Account~
    + Users : DbSet~User~
    + Managers : DbSet~Manager~
    + Notifications : DbSet~Notification~
}

%% ==================== RELATIONSHIPS ====================

%% === COMPOSITION (filled diamond) ===
Account *-- User
Account *-- Manager
Account *-- Notification

%% === UNIDIRECTIONAL ASSOCIATION (solid arrow) ===
BackendController --> INotificationService
NotificationService --> INotificationRepository
NotificationRepository --> AppDbContext

%% === INTERFACE REALIZATION ===
NotificationService ..|> INotificationService
NotificationRepository ..|> INotificationRepository

%% === DEPENDENCY (dashed arrows) ===
FrontendController ..> BackendController
FrontendController ..> NotificationViewModel
BackendController ..> NotificationAdminResponseDto
NotificationService ..> NotificationAdminResponseDto
NotificationRepository ..> Notification

%% ==================== STYLES ====================

classDef default fill:#FFFFFF,stroke:#000000,stroke-width:1px,color:#000000
